--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -4,14 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Wannaknow" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Wannaknow" %>">
-    <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= stylesheet_link_tag "landing/landing" %>
+    <%= stylesheet_link_tag "application-all", :media => "all" %>
+    <%= stylesheet_link_tag "application-landing" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
   </head>
   <body class="<%= controller_name %> <%= action_name %>">
-    </header>
+    
   
             
               <%= yield %>
