--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -5,9 +5,8 @@
     <%= f.input :title %>
     <%= f.input :body %>
     <%= f.input :video %>
-    <%= f.input :funded %>
+    <%= f.input :funding_goal %>
   </div>
-
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
