--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,7 +16,8 @@
     <td><%= project.title %></td>
     <td><%= project.body %></td>
     <td><%= project.video %></td>
-    <td><%= project.funded %></td>
+    <td><%= project.funding_goal %></td>
+    <td><%= project.current_funding %></td>
     <td><%= link_to 'Show', project %></td>
     <td><%= link_to 'Edit', edit_project_path(project) %></td>
     <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
