--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,7 @@
 
 <table>
   <tr>
+    <th></th>
     <th>Funding Goal</th>
     <th>Topic</th>
     <th>Video Link</th>
@@ -14,6 +15,7 @@
   <% if !@projects.empty? %>
     <% @projects.each do |project| %>
       <tr>
+      <td><%= gravatar_for(current_user) %></td>
       <td><%= project.funding_goal %></td>
       <td><%= project.title %></td>
       <td><%= project.video %></td>
