--- a/app/assets/stylesheets/landing/landing.css.scss
+++ b/app/assets/stylesheets/landing/landing.css.scss
@@ -5,10 +5,49 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
-body { 
-  padding-top: 0px; 
+
+body {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  color: transparent;
+  background-color: transparent;
+  font-size: 20px;
+  line-height: 20px;
 }
+
+a {
+    color: white;
+    hover: white;
+    text-decoration: none;
+    font-size: 15px
+}
+
+modal {
+	background-color: white;
+}
+
+h4 {
+    font-size: 30px;
+    line-height: 10px;
+    padding-bottom: 50px;
+
+}
+
+h3 {
+    font-size: 60px;
+    padding-top: 140px;
+    padding-bottom: 40px;
+}
+
+.btn-large {
+    border-radius: 30px 30px 30px 30px;
+    font-size: 16px;
+    line-height: normal;
+    padding: 9px 14px;
+}
+
 #landing {
     width: 50%;
     margin: 0px auto;
 }
+
