--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div id="request-invite" class="modal" style="display: <%= @user.errors.any? ? 'block' : 'none';%>">
+<div id="request-invite" class="modal" style="display: <%= @user.errors.any? ? 'block' : 'none';%>; background-color: white; width=50%; color:black">
   <%= simple_form_for resource, :as => resource_name, :url => registration_path(resource_name) , :html => {:class => 'form-horizontal' } do |f| %>
     <div class="modal-header">
       <a class="close" data-dismiss="modal">&#215;</a>
@@ -14,10 +14,12 @@
     </div>
   <% end %>
 </div>
-<div id="landing">
-  <h2>Want in?</h2>
+<div id="landing" style="text-align: center; font-weight: bold; font-family: 'Arial Rounded MT'; color: white; text-shadow: 0.1em 0.1em 0.2em black; font-size: 36px;">
+  <h3>Wanna Know?</h3>  
+  <h4> Empowering curiosity to connect <br> <br> <br> with experienced people. </h4>
 </div>
-<div id="call-to-action" style="text-align: center; margin-top: 80px">
+<div id="call-to-action" style="color: white; text-align: center; text-shadow: 0.1em 0.1em 0.2em black; margin-top: 5px;">
   <a class="btn btn-primary btn-large" data-toggle="modal" href="#request-invite">Request invite</a>
+  <br> <br>
   <%= link_to 'I told em we already got one!', new_user_session_path %>
 </div>
