--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,27 +1,187 @@
+<!doctype html>
+<html>
+  
+  <head>
+    <title>project-page-temp-new</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <link rel="stylesheet" href="https://app.divshot.com/css/divshot-util.css">
+    <%= stylesheet_link_tag "application-all", :media => "all" %>
+    <link rel="stylesheet" href="https://djyhxgczejc94.cloudfront.net/builds/80037b02082b29f5f9cea127cab2a4ba4365ec67.css">
+    <script src="https://app.divshot.com/js/jquery.min.js"></script>
+  </head>
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <div class="navbar-content">
+            <ul class="nav">
+              <li class="active">
+                <%= link_to 'home', root_path %> 
+              </li>
+              <li>
+                <%= link_to 'Sign up', new_user_registration_path %>
+              </li>
+              <li>
+                <%= link_to 'Login', new_user_session_path %>  
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row-fluid">
+        <div class="span3">
+          <!-- <img src="http://placehold.it/256x256" width="256" height="256">  -->
+        </div>
+        <div class="span6">
+          <div class="well">
+            <h1 class="align-center">What do you WannaKnow?</h1>
+            <h2 class="align-center">We are empowering curious minds through sharing</h2>
+          </div>
+        </div>
+        <div class="span3">
+          <!-- <img src="http://placehold.it/256x256" width="256" height="256">  -->
+        </div>
+      </div>
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="well">
+            <h2 class="align-center">We Wanna Know about</h2>
+            <h1 class="align-center">Andrew Brackin's first Startup Weekend</h1>
+            <h2 class="align-center"><a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_50a003bac0913" href="https://www.wepay.com/stores/431561/item/210312">I am curious for a dollar $ !</a><script type="text/javascript">var WePay = WePay || {};WePay.load_widgets = WePay.load_widgets || function() { };WePay.widgets = WePay.widgets || [];WePay.widgets.push( {object_id: 210312,widget_type: "store_item_buy_now",anchor_id: "wepay_widget_anchor_50a003bac0913",widget_options: {store_id: 431561,show_item_price: true,show_item_images: true,button_text_sold_out: "Sold Out",show_item_custom_options: true,button_text: "I am curious for a dollar $ !"}});if (!WePay.script) {WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);} else if (WePay.load_widgets) {WePay.load_widgets();}</script>
+          </div>
+        </div>
+      </div>
+      <a class="btn btn-large btn-primary btn-block visible-phone" href="#"><span class="btn-label">Sign Up Today!</span></a>
+      <div class="row-fluid main-features">
+        <div class="span6">
+          <div class="well">
+            <h3 class="align-center">Curious about this experience?</h3>
+            <p class="align-center">With Follow the request we can tell Andrew we can encourage him to reply</p>
+            <div>
+              <span style="text-align: start;">(you will only be charged if he replies)</span>
+              <br> 
+            </div>
+            <p></p>
+            <div>
+              <br> 
+            </div>
+            <p></p>
+            <a class="btn btn-success btn-block" href="#"><span class="btn-label">Yes, I am curious (Follow the request)<br></span></a>
 
+          </div>
+        </div>
+        <div class="span6">
+          <div class="well">
+            <h3 class="align-center">If want to make a comment or question</h3>
+            <p class="align-center">The questions or make comments about Andrew's experience</p>
+            <div>
+              <span style="text-align: start;">(you will only be charged if he replies to your submission)</span>
+              <br> 
+            </div>
+            <p></p>
+            <div>
+              <br> 
+            </div>
+            <p></p>
+            <a class="btn btn-info btn-block" href="#"><span class="btn-label">Pay a little more, get a little more (Follow the request)</span></a> 
+          </div>
+        </div>
+      </div>
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="well">
+            <h2 class="align-center">We Wanna Know about</h2>
+            <h1 class="align-center">Dhani Jones' favorite bowtie</h1>
+            <h2 class="align-center"><a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_50a003bac0913" href="https://www.wepay.com/stores/431561/item/210312">I am curious for a dollar $ !</a><script type="text/javascript">var WePay = WePay || {};WePay.load_widgets = WePay.load_widgets || function() { };WePay.widgets = WePay.widgets || [];WePay.widgets.push( {object_id: 210312,widget_type: "store_item_buy_now",anchor_id: "wepay_widget_anchor_50a003bac0913",widget_options: {store_id: 431561,show_item_price: true,show_item_images: true,button_text_sold_out: "Sold Out",show_item_custom_options: true,button_text: "I am curious for a dollar $ !"}});if (!WePay.script) {WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);} else if (WePay.load_widgets) {WePay.load_widgets();}</script>
+          </div>
+        </div>
+      </div>
+      <div class="row-fluid main-features">
+        <div class="span6">
+          <div class="well">
+            <h3 class="align-center">Curious about this experience?</h3>
+            <p class="align-center">With Follow the request we can tell Dhani we can encourage him to reply</p>
+            <div>
+              <span style="text-align: start;">(you will only be charged if he replies)</span>
+              <br> 
+            </div>
+            <p></p>
+            <div>
+              <br> 
+            </div>
+            <p></p>
+            <p></p>
+            <a class="btn btn-success btn-block" href="#"><span class="btn-label">Yes, I am curious (Follow the request)<br></span></a> 
+          </div>
+        </div>
+        <div class="span6">
+          <div class="well">
+            <h3 class="align-center">If want to make a comment or question</h3>
+            <p class="align-center">The questions or make comments about Dhani's experience</p>
+            <div>
+              <span style="text-align: start;">(you will only be charged if he replies to your submission)</span>
+              <br> 
+            </div>
+            <p></p>
+            <div>
+              <br> 
+            </div>
+            <p></p>
+            <a class="btn btn-info btn-block" href="#"><span class="btn-label">Pay a little more, get a little more (Follow the request)<br></span></a> 
+          </div>
+        </div>
+      </div>
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="well">
+            <h2 class="align-center">We Wanna Know about</h2>
+            <h1 class="align-center">the favorite beer of the Sam Adam's Brewmaster
+            </h1>
+            <h2 class="align-center"><a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_50a003bac0913" href="https://www.wepay.com/stores/431561/item/210312">I am curious for a dollar $ !</a><script type="text/javascript">var WePay = WePay || {};WePay.load_widgets = WePay.load_widgets || function() { };WePay.widgets = WePay.widgets || [];WePay.widgets.push( {object_id: 210312,widget_type: "store_item_buy_now",anchor_id: "wepay_widget_anchor_50a003bac0913",widget_options: {store_id: 431561,show_item_price: true,show_item_images: true,button_text_sold_out: "Sold Out",show_item_custom_options: true,button_text: "I am curious for a dollar $ !"}});if (!WePay.script) {WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);} else if (WePay.load_widgets) {WePay.load_widgets();}</script>
+          </div>
+        </div>
+      </div>
+      <div class="row-fluid main-features">
+        <div class="span6">
+          <div class="well">
+            <h3 class="align-center">Curious about this experience?</h3>
+            <p class="align-center">With Follow the request we can tell Sam we can encourage him to reply</p>
+            <div>
+              <span style="text-align: start;">(you will only be charged if he replies)</span>
+              <br> 
+            </div>
+            <p></p>
+            <div>
+              <br> 
+            </div>
+            <p></p>
+            <a class="btn btn-success btn-block" href="#"><span class="btn-label">Yes, I am curious (Follow the request)
+            
+            </span></a> 
+          </div>
+        </div>
+        <div class="span6">
+          <div class="well">
+            <h3 class="align-center">If want to make a comment or question</h3>
+            <p class="align-center">The questions or make comments about Sam's experience</p>
+            <div>
+              <span style="text-align: start;">(you will only be charged if he replies to your submission)</span>
+              <br> 
+            </div>
+            <p></p>
+            <div>
+              <br> 
+            </div>
+            <p></p>
+            <a class="btn btn-info btn-block" href="#"><span class="btn-label">Pay a little more, get a little more (Follow the request)<br></span></a> 
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://app.divshot.com/js/bootstrap.min.js"></script>
+  </body>
 
-
-<h3>Active Projects</h3>
-
-<table>
-  <tr>
-    <th></th>
-    <th>Funding Goal</th>
-    <th>Topic</th>
-    <th>Video Link</th>
-    <th>% funded</th>
-    <th>Link</th>
-  </tr>  
-  <% if !@projects.empty? %>
-    <% @projects.each do |project| %>
-      <tr>
-      <td></td>
-      <td><%= project.funding_goal %></td>
-      <td><%= project.title %></td>
-      <td><%= project.video %></td>
-      <td><%= project.current_funding %></td>
-      <td><%= link_to 'Show', project %></td>
-      </tr>
-    <% end %>
-  <% end %>
-</table>
+</html>
