--- a/app/assets/stylesheets/landing/landing.css.scss
+++ b/app/assets/stylesheets/landing/landing.css.scss
@@ -1,5 +1,5 @@
 html { 
-  background: url(rollergirls.jpg) no-repeat center center fixed; 
+  background: url(../rollergirls.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -47,6 +47,7 @@ h3 {
 }
 
 #landing {
+    color: white;
     width: 50%;
     margin: 0px auto;
 }
